--- a/src/renderer/src/assets/css/base.less
+++ b/src/renderer/src/assets/css/base.less
@@ -26,6 +26,14 @@ body {
   -webkit-app-region: drag;
 }
 
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
 .horizontal-center {
   position: absolute;
   left: 50%;
@@ -43,6 +51,11 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.align-right {
+  position: absolute;
+  right: 0;
 }
 
 .user-cannot-select {
